--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "queracollege/string-utils007",
+  "name": "hrmse/string-utils",
   "description": "Simple string utils for dealing easier with them",
   "keywords": [
     "string",
